--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="container">
 		<h1>反向代理负载均衡演示</h1>
-		
+		<!-- 输入区：消息输入与服务器选择 -->
 		<div class="input-section">
 			<textarea id="messageInput" placeholder="请输入要发送的消息..."></textarea>
 			<div class="controls">
@@ -19,7 +19,7 @@
 				<button onclick="sendMessage()">发送</button>
 			</div>
 		</div>
-
+		<!-- 历史区：展示通信历史 -->
 		<div class="history-section">
 			<h2>通信历史</h2>
 			<div id="messageHistory"></div>
